s/avatar.key/avatar.s3key/g - Key is a reserved keyword in MariaDB

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,9 @@ jpa:
         hbm2ddl:
           auto: update
         show_sql: true
+
+aws:
+  s3:
+    bucket:
+      legacy: sketch-legacy
+      modern: sketch-modern
